--- a/package.json
+++ b/package.json
@@ -5,5 +5,16 @@
     "pg": "^8.12.0",
     "pg-promise": "^11.9.1"
   },
-  "type": "module"
+  "type": "module",
+  "name": "tp4-base_de_datos",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
