--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "pg": "^8.12.0",
-    "pg-promise": "^11.9.1"
+    "pg-promise": "^11.9.1",
+    "readline": "^1.3.0"
   },
   "type": "module",
   "name": "tp4-base_de_datos",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
